--- a/client/main.css
+++ b/client/main.css
@@ -1,9 +1,10 @@
 /* CSS declarations go here */
 body {
-  background-color: #004358;
+  background-color: #000;
   background-size: cover;
-  margin: 0;
-  font-family:"Work Sans"
+  margin: 0 auto;
+  width: 100%;
+  font-family:"Work Sans";
 
 }
 .card-container{
@@ -20,9 +21,11 @@ body {
   text-align: center;;
   flex-direction: column;
   justify-content: space-around;
-  color: white;
+  color: #82A3C0;
 }
 .scrollable-list {
+  background-color: black;
+  color: white;
   padding-top: 20px;
   height: 350px;
   overflow-y:scroll;
@@ -30,7 +33,78 @@ body {
 
 .bottom-info {
   bottom: 0;
+  align: center;
   position: fixed;
   width: 100%;
+  max-width: 600px;
   text-align: center
+}
+
+#render-target {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+}
+
+
+/* star field */
+#space, .stars {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.stars {
+  background-image:
+          radial-gradient(2px 2px at 20px 30px, #eee, rgba(0,0,0,0)),
+          radial-gradient(2px 2px at 40px 70px, #fff, rgba(0,0,0,0)),
+          radial-gradient(2px 2px at 50px 160px, #ddd, rgba(0,0,0,0)),
+          radial-gradient(2px 2px at 90px 40px, #fff, rgba(0,0,0,0)),
+          radial-gradient(2px 2px at 130px 80px, #fff, rgba(0,0,0,0)),
+          radial-gradient(2px 2px at 160px 120px, #ddd, rgba(0,0,0,0));
+  background-repeat: repeat;
+  background-size: 200px 200px;
+  animation: zoom 5s infinite;
+  opacity: 0;
+}
+
+.stars:nth-child(1) {
+  background-position: 50% 50%;
+  animation-delay: 0s;
+}
+.stars:nth-child(2) {
+  background-position: 20% 60%;
+  animation-delay: 1s;
+}
+.stars:nth-child(3) {
+  background-position: -20% -30%;
+  animation-delay: 2s;
+}
+.stars:nth-child(4) {
+  background-position: 40% -80%;
+  animation-delay: 3s;
+}
+.stars:nth-child(5) {
+  background-position: -20% 30%;
+  animation-delay: 4s;
+}
+
+@keyframes zoom {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+    animation-timing-function: ease-in;
+  }
+  85% {
+    opacity: 1;
+    transform: scale(2.8);
+    animation-timing-function: linear;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3.5);
+  }
 }
